--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,11 +14,11 @@ alabaster==0.7.13
     # via sphinx
 arrow==1.2.3
     # via jinja2-time
-astroid==2.15.2
+astroid==2.15.4
     # via pylint
 async-timeout==4.0.2
     # via aiohttp
-attrs==22.2.0
+attrs==23.1.0
     # via aiohttp
 babel==2.12.1
     # via sphinx
@@ -66,7 +66,7 @@ build==0.10.0
     # via pip-tools
 bump2version==1.0.1
     # via -r requirements-dev.in
-certifi==2022.12.7
+certifi==2023.5.7
     # via requests
 chardet==5.1.0
     # via binaryornot
@@ -88,9 +88,9 @@ colored==1.4.4
     # via syrupy
 cookiecutter==2.1.1
     # via cruft
-coverage[toml]==7.2.3
+coverage[toml]==7.2.5
     # via pytest-cov
-cruft[pyproject]==2.14.0
+cruft[pyproject]==2.15.0
     # via -r requirements-dev.in
 dill==0.3.6
     # via pylint
@@ -103,7 +103,7 @@ docutils==0.17.1
     #   sphinx-rtd-theme
 exceptiongroup==1.1.1
     # via pytest
-filelock==3.11.0
+filelock==3.12.0
     # via
     #   tox
     #   virtualenv
@@ -127,7 +127,7 @@ idna==3.4
     #   yarl
 imagesize==1.4.1
     # via sphinx
-importlib-metadata==6.3.0
+importlib-metadata==6.6.0
     # via textual
 iniconfig==2.0.0
     # via pytest
@@ -144,7 +144,7 @@ jinja2-time==0.2.0
     # via cookiecutter
 lazy-object-proxy==1.9.0
     # via astroid
-linkify-it-py==2.0.0
+linkify-it-py==2.0.2
     # via markdown-it-py
 m2r2==0.3.2
     # via -r requirements-dev.in
@@ -175,7 +175,7 @@ multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
-mypy==1.2.0
+mypy==1.3.0
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via
@@ -193,7 +193,7 @@ pathspec==0.11.1
     # via black
 pip-tools==6.13.0
     # via -r requirements-dev.in
-platformdirs==3.2.0
+platformdirs==3.5.1
     # via
     #   black
     #   pylint
@@ -218,15 +218,15 @@ pydocstyle[toml]==6.3.0
     # via -r requirements-dev.in
 pyflakes==3.0.1
     # via flake8
-pygments==2.15.0
+pygments==2.15.1
     # via
     #   rich
     #   sphinx
-pylint==2.17.2
+pylint==2.17.4
     # via -r requirements-dev.in
 pyproject-hooks==1.0.0
     # via build
-pytest==7.3.0
+pytest==7.3.1
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -249,11 +249,11 @@ pyyaml==6.0
     # via
     #   bolton-clack
     #   cookiecutter
-requests==2.28.2
+requests==2.30.0
     # via
     #   cookiecutter
     #   sphinx
-rich==13.3.4
+rich==13.3.5
     # via textual
 setuptools-scm==7.1.0
     # via -r requirements-dev.in
@@ -296,7 +296,7 @@ sqlalchemy==1.4.35
     #   -r requirements.in
     #   greatday
     #   sqlmodel
-sqlalchemy2-stubs==0.0.2a33
+sqlalchemy2-stubs==0.0.2a34
     # via sqlmodel
 sqlmodel==0.0.8
     # via
@@ -304,11 +304,11 @@ sqlmodel==0.0.8
     #   greatday
 structlog==23.1.0
     # via bolton-logrus
-syrupy==4.0.1
+syrupy==4.0.2
     # via -r requirements-dev.in
 text-unidecode==1.3
     # via python-slugify
-textual[dev]==0.19.1
+textual[dev]==0.24.1
     # via
     #   -r requirements.in
     #   greatday
@@ -326,7 +326,7 @@ tomli==2.0.1
     #   pytest
     #   setuptools-scm
     #   tox
-tomlkit==0.11.7
+tomlkit==0.11.8
     # via pylint
 tox==3.28.0
     # via
@@ -334,9 +334,9 @@ tox==3.28.0
     #   tox-pyenv
 tox-pyenv==1.1.0
     # via -r requirements-dev.in
-typer==0.7.0
+typer==0.9.0
     # via cruft
-types-python-dateutil==2.8.19.12
+types-python-dateutil==2.8.19.13
     # via -r requirements-dev.in
 typing-extensions==4.5.0
     # via
@@ -349,29 +349,30 @@ typing-extensions==4.5.0
     #   setuptools-scm
     #   sqlalchemy2-stubs
     #   textual
-uc-micro-py==1.0.1
+    #   typer
+uc-micro-py==1.0.2
     # via linkify-it-py
-urllib3==1.26.15
+urllib3==2.0.2
     # via requests
 vimala==0.1.2
     # via
     #   -r requirements.in
     #   greatday
-virtualenv==20.21.0
+virtualenv==20.23.0
     # via tox
 wheel==0.40.0
     # via pip-tools
 wrapt==1.15.0
     # via astroid
-yarl==1.8.2
+yarl==1.9.2
     # via aiohttp
 zipp==3.15.0
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
-pip==23.0.1
+pip==23.1.2
     # via pip-tools
-setuptools==67.6.1
+setuptools==67.7.2
     # via
     #   pip-tools
     #   setuptools-scm
